# SmileEngine

./: eva-01_rig.gltf
src/: CMakeLists.txt  camera.cc  camera.h  engine.cc  engine.h  example.cc  mesh.h  raster.cc  raster.h  scene.h  triangle.h
src/gltf_loader/: CMakeLists.txt  gltf_loader.cc  gltf_loader.h
