cmake_minimum_required(VERSION 3.20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 17)
find_package(Eigen3 REQUIRED)
set(CMAKE_CXX_FLAGS "-O2")
add_library(engine triangle.cc camera.cc scene.cc engine.cc raster.cc)
target_link_libraries(engine Eigen3::Eigen pthread profiler)
#add_subdirectory(gltf_loader)
add_executable(example example.cc)
target_include_directories(example PUBLIC)
target_link_libraries(example PUBLIC engine)
	#	gltf_loader)
